add user router functions for filter